Fix heroku api speed too low

--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -46,7 +46,7 @@ body{
   border-bottom: 1px dashed $grey-light;
 }
 
-.cost-inner {
+#cost-inner {
   box-sizing: border-box;
   text-align: left;
   /*width: 240px;*/
